[gd_scene load_steps=13 format=3 uid="uid://b8x7y2k3m4n5o"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_0h8x7"]
[ext_resource type="Script" path="res://scripts/Player.gd" id="2_1i9y8"]
[ext_resource type="Script" path="res://scripts/LevelGenerator.gd" id="3_2j9z8"]
[ext_resource type="Script" path="res://scripts/SmoothCamera.gd" id="4_3k0a9"]
[ext_resource type="Script" path="res://scripts/ObstacleSpawner.gd" id="5_4l1b0"]
[ext_resource type="Script" path="res://scripts/CoinSpawner.gd" id="6_5m2c1"]
[ext_resource type="Script" path="res://scripts/ExitSpawner.gd" id="7_6o4e3"]
[ext_resource type="Script" path="res://scripts/TimerManager.gd" id="8_7p5f4"]
[ext_resource type="Script" path="res://scripts/GameState.gd" id="9_8q6g5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7"]
size = Vector2(1024, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8"]
size = Vector2(40, 600)

[node name="Main" type="Node2D"]
script = ExtResource("1_0h8x7")

[node name="Background" type="ColorRect" parent="."]
z_index = -10
offset_left = -1000.0
offset_top = -1000.0
offset_right = 2000.0
offset_bottom = 2000.0
color = Color(0, 0, 0, 1)

[node name="PlayArea" type="ColorRect" parent="."]
offset_right = 1024.0
offset_bottom = 600.0
color = Color(0.2, 0.3, 0.4, 1)

[node name="LevelGenerator" type="Node2D" parent="."]
script = ExtResource("3_2j9z8")

[node name="ObstacleSpawner" type="Node2D" parent="LevelGenerator"]
script = ExtResource("5_4l1b0")

[node name="CoinSpawner" type="Node2D" parent="LevelGenerator"]
script = ExtResource("6_5m2c1")

[node name="ExitSpawner" type="Node2D" parent="LevelGenerator"]
script = ExtResource("7_6o4e3")

[node name="TimerManager" type="Node2D" parent="."]
script = ExtResource("8_7p5f4")

[node name="GameState" type="Node" parent="."]
script = ExtResource("9_8q6g5")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(86, 63)
script = ExtResource("2_1i9y8")

[node name="PlayerCollision" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_5")

[node name="PlayerBody" type="ColorRect" parent="Player"]
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
color = Color(0.8, 0.2, 0.2, 1)

[node name="PlayerDot" type="ColorRect" parent="Player/PlayerBody"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 23.0
offset_top = 11.0
offset_bottom = -12.0

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("4_3k0a9")

[node name="Boundaries" type="Node2D" parent="."]

[node name="TopWall" type="StaticBody2D" parent="Boundaries"]
position = Vector2(512, -20)

[node name="TopWallBody" type="ColorRect" parent="Boundaries/TopWall"]
offset_left = -512.0
offset_top = -20.0
offset_right = 512.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="TopWallCollision" type="CollisionShape2D" parent="Boundaries/TopWall"]
shape = SubResource("RectangleShape2D_7")

[node name="BottomWall" type="StaticBody2D" parent="Boundaries"]
position = Vector2(512, 620)

[node name="BottomWallBody" type="ColorRect" parent="Boundaries/BottomWall"]
offset_left = -512.0
offset_top = 600.0
offset_right = 512.0
offset_bottom = 620.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="BottomWallCollision" type="CollisionShape2D" parent="Boundaries/BottomWall"]
shape = SubResource("RectangleShape2D_7")

[node name="LeftWall" type="StaticBody2D" parent="Boundaries"]
position = Vector2(-20, 300)

[node name="LeftWallBody" type="ColorRect" parent="Boundaries/LeftWall"]
offset_left = -20.0
offset_top = -300.0
offset_bottom = 300.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="LeftWallCollision" type="CollisionShape2D" parent="Boundaries/LeftWall"]
shape = SubResource("RectangleShape2D_8")

[node name="RightWall" type="StaticBody2D" parent="Boundaries"]
position = Vector2(1044, 300)

[node name="RightWallBody" type="ColorRect" parent="Boundaries/RightWall"]
offset_left = 1024.0
offset_top = -300.0
offset_right = 1044.0
offset_bottom = 300.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="RightWallCollision" type="CollisionShape2D" parent="Boundaries/RightWall"]
shape = SubResource("RectangleShape2D_8")

[node name="UI" type="CanvasLayer" parent="."]

[node name="TimerLabel" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 200.0
offset_bottom = -20.0
text = "Time: 30"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoinLabel" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = -60.0
text = "Coins: 0/5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelProgressLabel" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -160.0
offset_right = 200.0
offset_bottom = -100.0
text = "Level: 0/7"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverLabel" type="Label" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinLabel" type="Label" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
text = "YOU WIN!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 60.0
text = "Restart"

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true
